# ocr-playground

./: .coveragerc  .dockerignore  .env  .env.local  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  .pylintrc  Dockerfile  Makefile  README  README.md  alembic.ini  application.yml  deployment.yml  docker-compose.local.yml  docker-compose.yml  main.py  poetry.toml  pyproject.toml  start.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0253786ec574_user.py  2eee0e694b57_init_document_model.py
app/: .env  ImageProcessing.py  Recognition.py  __init__.py  app.py  config.py  containers.py  detect_mrz.py  image_processing.py  main.py  processor.py  pydantic_serializer.py  server.py  start.sh  tokenization.py  transform.py  worker.py
app/alembic/versions/: fcb17d19cf5a_init.py
app/api/: __init__.py  dependencies.py  health.py
app/api/extract/: schemas.py  views.py
app/core/: config.py
app/core/db/: __init__.py  base.py  session.py
app/models/: __init__.py  document.py  user.py
app/recognizers/: __init__.py  easyocr_recognizer.py  paddle_recognizer.py  recognizer.py  tesseract_recognizer.py
app/repositories/: document.py
app/schemas/: base.py  document.py
app/services/: document.py
app/static/css/: style.css
app/templates/: index.html  result.html
app/tests/: test_main.py
app/user/: models.py
app/utils/: file.py  helpers.py  repository.py
docker/nginx/: nginx.conf
grafana/: grafana.db
infrastructure/docker/nginx/: Dockerfile  nginx.env
infrastructure/grafana/: grafana.db
infrastructure/terraform/: provider.tf  terraform.tfstate  terraform.tfstate.backup
infrastructure/terraform/values/: argocd.yaml
ocr-app/: .dockerignore  .env  .flake8  Dockerfile  docker-compose.yml  dockerfile  main.py  makefile  pyproject.toml
ocr-app/alembic/: env.py
ocr-app/alembic/versions/: fcb17d19cf5a_init.py
ocr-app/app/: Makefile  alembic.ini  app.py  containers.py  image_processing.py  main.py  processor.py  tokenization.py  transform.py  worker.py
ocr-app/app/alembic/: env.py
ocr-app/app/api/: dependencies.py  health.py  tasks.py
ocr-app/app/api/extract/: schemas.py  views.py
ocr-app/app/core/: config.py
ocr-app/app/core/db/: mixins.py  session.py
ocr-app/app/models/: base.py  document.py  user.py
ocr-app/app/recognizers/: __init__.py  paddle_recognizer.py  recognizer.py
ocr-app/app/repositories/: document.py
ocr-app/app/schemas/: base.py  document.py
ocr-app/app/services/: document.py
ocr-app/app/tests/: test_main.py
ocr-app/app/utils/: file.py  helpers.py  image_utils.py  repository.py
prometheus/: prometheus.yml
terraform/: .terraform.lock.hcl
terraform/values/: argocd.yaml
