[tool.poetry]
name = "ocr-playground"
version = "0.1.0"
description = ""
authors = ["victory-sokolov <viktorsokolov.and@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.11,<3.11"
fastapi = "0.95.1"
uvicorn = "0.21.1"
python-multipart = "^0.0.6"
numpy = "^1.23.5"
imutils = "^0.5.3"
python-dotenv = "1.0.0"
rq = "^1.5.2"
redis = "^4.3.4"
aiofiles = "23.1.0"
easyocr = "1.7.0"
spacy = "^3.2.0"
paddleocr = "^2.6"
paddlepaddle = "^2.3.2"
dependency-injector = "4.41.0"
numba = "^0.56.4"
Pillow = "9.5.0"
tesserocr = "2.6.1"
Jinja2 = "^3.1.2"
loguru = "^0.7.0"
wand = "^0.6.11"
opencv-python = "4.8.0.76"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
parameterized = "^0.9.0"
pre-commit = "^3.2.2"
mypy = "^1.2.0"
flake8 = "^6.0.0"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |__pycache__
  |Dockerfile
  |Jenkinfile
)/
'''

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = false
install_types = true

[tool.poetry.group.dev.dependencies]
flake8-bugbear = "^23.3.23"
flake8-variables-names = "^0.0.5"
pylint = "^2.17.2"
types-redis = "^4.5.4.1"
coverage = "^7.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"
