[tool.poetry]
name = "ocrapp"
version = "0.1.0"
description = "OCR app built with FastAPI"
authors = ["victory-sokolov <viktorsokolov.and@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10.14"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
python-multipart = "^0.0.9"
numpy = "^1.26.3"
python-dotenv = "^1.0.1"
redis = "^5.0.1"
aiofiles = "^23.2.1"
easyocr = "^1.7.1"
spacy = "^3.2.0"
dependency-injector = "^4.41.0"
numba = "^0.59.0"
Pillow = "^10.2.0"
Jinja2 = "^3.1.3"
loguru = "^0.7.2"
wand = "^0.6.11"
opencv-python-headless = "^4.8.0.76"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
celery = "^5.4.0"
gunicorn = "^22.0.0"
alembic = "^1.13.1"
prometheus-fastapi-instrumentator = "^7.0.0"
flower = "^2.0.1"
tesserocr = "^2.7.0"

[tool.poetry.group.dev.dependencies]
flake8-bugbear = "^23.3.23"
flake8-variables-names = "^0.0.5"
types-redis = "^4.5.4.1"
coverage = "^7.5.0"
pylint = "^2.17.5"
pre-commit = "^3.6.0"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"
flake8 = "^7.0.0"
watchdog = {extras = ["watchmedo"], version = "^4.0.1"}
py-spy = "^0.3.14"


[tool.poetry.extras]
paddle_ocr = ["paddleocr"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |__pycache__
  |Dockerfile
  |Jenkinfile
)/
'''

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
ignore_missing_imports = true
check_untyped_defs = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_optional = true
follow_imports = "skip"
install_types = false
exclude = ["venv", ".venv", "alembic", "app/tests"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"
